<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitleSpanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bienvenido!"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/lblTitleCestina"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text=" Vítejte!"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/inputName"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputSurname"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/inputSurname"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputMail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/hint_mail"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputUser"
            android:layout_width="450dp"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/hint_user"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="429dp"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/hint_pass"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputPass2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/hint_pass2"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputLatitud"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/hint_latitud"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputLongitud"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/hint_longitud"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:backgroundTint="@color/teal_700"
            android:onClick="registrarUsuario"
            android:text="@string/btnRegister" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:backgroundTint="@color/purple_500"
            android:onClick="login"
            android:text="@string/btnLogin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>